added new operator analysis

--- a/Prime wave representation .ipynb
+++ b/Prime wave representation .ipynb
@@ -265,20 +265,29 @@
     "those we can think of all numbers as prime numbers but some numbers are more prime than others. (composit level)\n",
     "\n",
     "how easy is it to verify we have a very prime number\n",
-    "operator(x_wave) check if square:\n",
+    "operator(x_wave) check if square: O(1)\n",
     "sq_x_wave => x_wave_1/2_periods\n",
     "cb_x_wave => x_wave_1/3_periods\n",
     "\n",
-    "operator(x_wave) check if square root:\n",
+    "operator(x_wave) check if square root: O(1)\n",
     "sqrt_x_wave => x_wave_2x_periods\n",
     "cbrt_x_wave => x_wave_3x_periods\n",
     "\n",
-    "operator(x_wave) check if composit of 2 unknow prime:\n",
+    "operator(x_wave) check if composit of 2 unknow prime: O(1)\n",
     "sqrt_x_wave => x_wave_1/2_periods\n",
     "cbrt_x_wave => x_wave_1/3_periods\n",
     "\n",
+    "operator(p_wave) check if perfect x_number: O(2^p_list)\n",
+    "for(_[0:p_wave]){if(p_wave[x_number]=1){list.add(p_wave)}}} -> p_list\n",
+    "sum(dfs_combintion(p_list)->c_list) == X_number\n",
     "\n",
+    "operator(x_wave) check if perfect x_number is a number: O(x_waves)\n",
+    "Quantum Computer - check if this qubit state resonates with this value and add to list (num_qubits num_gate_stages)\n",
+    "for(_[0:x_wave]){if(x_wave[x_number]=1){list.add(x_wave)}}} -> x_list\n",
+    "sum(x_list) == X_number\n",
     "\n",
+    "   77\n",
+    "28 14 7 4 2 1\n",
     "'''"
    ]
   },
@@ -287,7 +296,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "improve formula\n",
+    "x_wave[0:i] = A*cos((2pi/x)*[0:i]-pi)-A\n",
+    "A - scaling factor\n",
+    "\n",
+    "g_wave[0:i] = cos((2pi/x)*[0:i]-pi)\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
