--- a/Prime wave representation .ipynb
+++ b/Prime wave representation .ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Prototype 1\"\"\"\n",
     "from scipy import signal\n",
     "import matplotlib.pyplot as plot\n",
     "import numpy as np\n",
@@ -36,15 +37,13 @@
     "    # Display\n",
     "    plot.grid()\n",
     "    plot.show()\n",
-    "    \n",
-    "    \n",
     "    return (n, cover_count)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -109,9 +108,10 @@
     }
    ],
    "source": [
+    "\"\"\"Run - Prototype 1\"\"\"\n",
     "(n2, cover_count2) = Gen_squ_wave(2,100)\n",
     "(n3, cover_count3) = Gen_squ_wave(3,100)\n",
-    "cc_super_pos = cover_count3 + cover_count2 + trogacover_count5\n",
+    "cc_super_pos = cover_count3 + cover_count2\n",
     "# Plot the square wave\n",
     "plot.plot(n2, cc_super_pos)\n",
     "plot.xticks(range(0, int(max(n2)), 1))\n",
@@ -156,61 +156,30 @@
    ],
    "source": [
     "'''\n",
-    "Note's on Error and Effeciency:\n",
-    "First error at p^2 for first p not added\n",
-    "e.g.\n",
-    "w2+w3 - first error 25 = 5^2 \n",
-    "1,2,3,4,[5],6,[7],8,9,... (1/2)*100 + (1/3)*100 = 50+33.3 = covers 83.3% of numbers\n",
-    "1x2, 1x3, \n",
-    "2x2, 2x3, \n",
-    "3x2, 3x3, \n",
-    "4x2, 4x3, \n",
-    "5x2, 5x3,\n",
-    "[No 5x5] -  first error will occure here as 5x2,5x3,5x4,[No 5x5], 5x6 = is covered \n",
-    "6x2, 6x3\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "With n p_waves we can find primes, P_s, in a range of p_n < P_s < (p_[n+1])^2\n",
-    "let P_s = [p_a,p_b,...]\n",
-    "such that \n",
-    "p_ax1 - not covered\n",
-    "    but \n",
-    "        p_axp_n[0]/p_ax2 - will be covered by known base_case p_n's e.g 2,3,...\n",
-    "        p_axp_n[1]/p_ax3 - will be covered by known base_case p_n's e.g 2,3,...\n",
-    "    till p_axp_a - not covered\n",
-    "    \n",
-    "p_bx1 - not covered\n",
-    "    but \n",
-    "        p_bxp_n[0]/p_bx2 - will be covered by known base_case p_n's e.g 2,3,...\n",
-    "        p_bxp_n[1]/p_bx3 - will be covered by known base_case p_n's e.g 2,3,...\n",
-    "    till p_bxp_b - not covered\n",
-    "        \n",
-    "p_axp_a - not covered the samlest number of \n",
-    "but p_axp_b will also not be covered but p_axp_b > p_axp_a\n",
-    "therefore:\n",
-    "    p_axp_a is the 1st error\n",
-    "    p_axp_b is the 2nd error\n",
-    "    p_bxp_b is the 3rd error\n",
-    "    and so on ...\n",
+    "Note's:\n",
     "\n",
-    "for P_s < p_axp_a < P_[s+1] < p_axp_b < P_[s+2] < p_bxp_b\n",
-    "    P_[s,s+1,s+2] set is accurate \n",
-    "    \n",
-    "Error Algo: \n",
-    "    given know bases_cases P_n - [2,3,...,P]\n",
-    "    \n",
-    "    for P_s in P and not in P_n:\n",
-    "        for p_az in P_s:\n",
-    "            if P_found < (p_az)^2 < P_found < (p_[az+1]*p_az) < P_found < (p_[az+1])^2\n",
-    "                P_found is an accuratly found prime\n",
+    "if wave_p[x_P] = -1 then\n",
+    "    x_P is a component of the prime number oscilation period\n",
+    "\n",
+    "if wave_p[x_c]< 0 then \n",
+    "    x_c is a composite number\n",
+    "\n",
+    "if wave_p[x_p] = 0 and x_n is 1st whole number = 0 in wave_p[:] then\n",
+    "    x_p is a prime number\n",
+    "\n",
+    "if wave_p[x_f] = 0 ans x_n is not 1st whole number = 0 in wave_p[:] then\n",
+    "    x_f is an found prime or composite number\n",
+    "    if x_f in (x_p, x_p^2) or (x_p^2, x_p*(x_p+1)) or ... :\n",
+    "        x_f is a prime number called x_fp\n",
+    "    else if x_f in [x_p^2, x_p*(x_p+1), (x_p+1)^2, ...] :\n",
+    "        x_f is a compsite number called x_fc\n",
+    "\n",
+    "coverage of all whole numbers:\n",
+    "-> (1/p2 + 1/p3 + 1/p5 - 1/p5*p2 - 1/p2*p3 - 1/p2*p3*p5)*100 = coverage%\n",
+    "-> (+ sum(n_choose_1_comb(1/p[:])) \n",
+    "    - (sum(n_choose_2_comb(1/p1[:]*p2[:])) + ... + sum(n_choose_n-1_comb(1/p1[:]*...*p(n-1)[:]))) \n",
+    "    - (1/p[0]*...*p[n])) * 100 \n",
+    "    = coverage%\n",
     "'''"
    ]
   },
@@ -221,24 +190,31 @@
    "outputs": [],
    "source": [
     "'''            \n",
-    "known_p0(2), known_p1(3), ..., P , ... , p3^2(5^2) = E, ... , P , ... , p4xp3(5*7) = E,  ... , P , ... ,  p4^2(7^2) = E, ...\n",
+    "Recusive formula for finding primes:\n",
+    "start with:\n",
+    "    wave_P2\n",
+    "for x in wave_P2:\n",
+    "    if wave_P2[x] = 0 then \n",
+    "        x_f = x\n",
+    "        if x_f is 1st whole number = 0 in wave_p[:]:\n",
+    "            x_fp = x_f\n",
+    "            fp_list.add(x_fp)\n",
+    "        else:\n",
+    "            l = LEN(wave_P2)//2\n",
+    "            r = 1\n",
+    "            while not compsite or prime:\n",
+    "                binary_search(wave_P2) - is x_f between fp or fp multiples\n",
+    "                    true  - x_fp = x_f\n",
+    "                    false - x_fc = x_f\n",
     "\n",
-    "Error at: \n",
-    "    (p[n+0])^2 , pn[n+1]*p[n+1],(p[n+1])^2, p[n+1]*p[n+2], (p[n+2])^2, ...,p[n+k-1]*p[n+k],(p[n+k])^2\n",
-    "    \n",
-    "can find FP in P at:\n",
-    "    FP0, (p[n+0])^2, FP1, pn[n+1]*p[n+1], FP2, (p[n+1])^2, FP3, ..., FP_k-1, p[n+k-1]*p[n+k], FP_k, (p[n+k])^2\n",
     "\n",
+    "generate waves from fp_list\n",
+    "wave_P234...X = wave_P2 + wave_P3 + wave_P5 + ... + wave_PX\n",
     "\n",
-    "1,2,3,5,7,11,13,17,19,23,\n",
-    "1,   4,  9,             25,49\n",
+    "start with :\n",
+    "    wave_P = wave_P234...X\n",
+    "    repeat alorgithm \n",
     "\n",
-    "3,6,9,12,15,18,\n",
-    "    9,      18,27,36,45,54,63,72,81,90,\n",
-    "3^2 == 3 hops of size 3\n",
-    "\n",
-    "\n",
-    "2x3-6,,2x2x3-12\n",
     "'''"
    ]
   },
@@ -249,6 +225,12 @@
    "outputs": [],
    "source": [
     "'''\n",
+    "improve formula\n",
+    "x_wave[0:i] = A*cos((2pi/x)*[0:i]-pi)-A\n",
+    "A - scaling factor\n",
+    "\n",
+    "g_wave[0:i] = cos((2pi/x)*[0:i]-pi)\n",
+    "\n",
     "Are Prime numbers infitie , would with function ever each a sumation were ine last wave is needed for all numbers to innifty?\n",
     "not sure, but leaning towards no.\n",
     "\n",
@@ -285,9 +267,6 @@
     "Quantum Computer - check if this qubit state resonates with this value and add to list (num_qubits num_gate_stages)\n",
     "for(_[0:x_wave]){if(x_wave[x_number]=1){list.add(x_wave)}}} -> x_list\n",
     "sum(x_list) == X_number\n",
-    "\n",
-    "   77\n",
-    "28 14 7 4 2 1\n",
     "'''"
    ]
   },
@@ -296,15 +275,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "improve formula\n",
-    "x_wave[0:i] = A*cos((2pi/x)*[0:i]-pi)-A\n",
-    "A - scaling factor\n",
-    "\n",
-    "g_wave[0:i] = cos((2pi/x)*[0:i]-pi)\n",
-    "\"\"\""
-   ]
+   "source": []
   }
  ],
  "metadata": {
