--- a/proto_1.ipynb
+++ b/proto_1.ipynb
@@ -247,6 +247,8 @@
     "those we can think of all numbers as prime numbers but some numbers are more prime than others. (composit level)\n",
     "\n",
     "how easy is it to verify we have a very prime number\n",
+    "operator(x_wave) check if factor: O(1)\n",
+    "\n",
     "operator(x_wave) check if square: O(1)\n",
     "sq_x_wave => x_wave_1/2_periods\n",
     "cb_x_wave => x_wave_1/3_periods\n",
